syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "GameServiceProtos";


message DeleteGameCommentRequest{
  int32 comment_id = 1;
  google.protobuf.Int32Value parent_id = 2;
}
