syntax = "proto3";

option csharp_namespace = "GameServiceProtos";

message EmptyMessage {};