syntax = "proto3";

option csharp_namespace = "GameServiceProtos";

message GameWithCommentsAndRatingRequest{
  int32 game_id = 1;
}
