syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "GameServiceProtos";

message AddGameCommentRequest{
  int32 game_id = 1;
  google.protobuf.Int32Value parent_id = 2;
  string content = 3;
}
