syntax = "proto3";

option csharp_namespace = "GameServiceProtos";

message GetAllCommentsForGameRequest{
  int32 game_id = 1;
}