syntax = "proto3";

option csharp_namespace = "GameServiceProtos";

message UpdateGameCommentRequest{
  int32 comment_id = 1;
  string content = 2;
}
